--- a/AnimationDemo/Controller/FlipViewController.xib
+++ b/AnimationDemo/Controller/FlipViewController.xib
@@ -32,7 +32,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="cah-7o-2ke" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="sy4-2g-ZBv"/>
                 <constraint firstItem="cah-7o-2ke" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="wmN-ro-wRM"/>
