--- a/AnimationDemo/Controller/ScreenRecordViewController.xib
+++ b/AnimationDemo/Controller/ScreenRecordViewController.xib
@@ -22,7 +22,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MPL-k7-Wej" customClass="TouchRecordView" customModule="AnimationDemo" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MPL-k7-Wej" customClass="PinchView" customModule="AnimationDemo" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="44" width="414" height="618"/>
                     <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
